# haskell-employee-mgr

./: .gitignore  LICENSE  Main  Main.hi  Main.hs  README.md  ReadData.hi  ReadData.hs  Run.sh  employee-mgr.cabal
date/: DatePersonale.csv  Experienta.csv  Studii.csv
src/: ASCIIArt.hs  DataReader.hs  EmployeePreview.hs  EmployeeTable.hs  EmployeeTablePrinter.hs  EmployeeWriter.hs  Entities.hs  GenericTable.hs  GenericTablePrinter.hs  Main.hs  ReadData.hs
