name:                employee-mgr
version:             1.0.0
synopsis:            A basic CLI employee manager written in Haskell.
description:         Does exactly what is says on the tin.
homepage:            https://github.com/MateiSirbu/haskell-employee-mgr
license:             BSD3
license-file:        LICENSE
author:              Matei Sîrbu
maintainer:          hello@msirbu.eu
copyright:           2021 Matei Sîrbu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable employee-mgr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       ansi-terminal
  other-modules:       EmployeeTable,
                       Entities,
                       GenericTable,
                       DataReader,
                       ASCIIArt,
                       EmployeePreview,
                       EmployeeWriter